hphp/hack/test/typecheck/expression_trees/elvis.php.exp
File "elvis.php", line 7, characters 13-27:
Unsupported syntax for expression trees. (Parsing[1002])
