hphp/hack/test/typecheck/expression_trees/elvis.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  // Currently no support for Elvis operator
  $_ = Code`true ?: "Hello"`;
}
